+ Xóa nút reply của comment ở phần QA (client) + Thêm div loader lúc nhập code ở màn hình client + Sửa lại append câu hỏi mới nhất lên đầu trang ở phần QA (client)

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/QA.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/QA.css
@@ -26,3 +26,13 @@
 .btn-reply {
     cursor:pointer;
 }
+
+.error-qa-title {
+    font-weight:bold;
+    margin-top:20px;
+}
+
+.btn-post-question {
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
