--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Schedule/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Schedule/Index.cshtml
@@ -2,8 +2,8 @@
 @{
     ViewBag.Title = "Index";
 }
-@using HmsService.ViewModels;
-@model EventViewModel
+@using HmsService.Models.Entities;
+@model Event
 
 
 <div class="container">
