--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/main.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/main.css
@@ -27,3 +27,17 @@
     width: 100%;
     height: 100%;
 }
+
+#txt-code-login {
+    text-align: center;
+}
+
+.container-loader {
+    height: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 999;
+    width: 100%;
+    background-color: rgba(128,128,128,0.6);
+    display:none;
+}
