--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/speaker.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/speaker.css
@@ -20,3 +20,8 @@
         box-shadow: 5px 10px 20px 7px #888888;
     }
 }
+
+.collection-empty-title {
+    margin-top:20px;
+    text-align:center;
+}
