--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
@@ -33,9 +33,22 @@
     <link rel="stylesheet" type="text/css" href="~/Content/CustomCss/main.css">
 </head>
 <body>
-
+    <div class="container-loader">
+        <div class="loader">
+            <span class="loader-block"></span>
+            <span class="loader-block"></span>
+            <span class="loader-block"></span>
+            <span class="loader-block"></span>
+            <span class="loader-block"></span>
+            <span class="loader-block"></span>
+            <span class="loader-block"></span>
+            <span class="loader-block"></span>
+            <span class="loader-block"></span>
+        </div>
+    </div>
+    
     <div class="limiter">
-        <div class="container-login100 bubbles" style="background-image: url('https://i.imgur.com/Pi5sTPQ.jpg');">
+        <div class="container-login100 bubbles" style="background-image: url('../../Content/img/Pi5sTPQ.jpg');">
             <div class="wrap-login100 p-t-190 p-b-30">
                 <div class="login100-form validate-form" id="div-section">
 
@@ -56,7 +69,7 @@
         </div>
     </div>
 
-    <div id="session-template">
+    <div id="session-template" style="display:none">
         <div class="container-login100-form-btn p-t-10">
             <a class="login100-form-btn" id="btn-session"></a>
         </div>
@@ -79,17 +92,20 @@
 <script>
     $(document).ready(function () {
         var urlApi = '@curPath';
-
+        
         //Check Code
         $('#btn-check-code').on('click', function () {
+            $('.container-loader').css('display', 'block');
             var code = $('#txt-code-login').val();
             if (code.length != 0) {
                 $.ajax({
                     url: urlApi + 'api/login/CheckCodeLogin/' + code,
                     method: "POST",
                     success: function (data) {
+                        console.log(data);
                         if (data.data != null) {
                             $('.message-error').css('display', 'none');
+                            $('.container-loader').css('display', 'none');
                             $('#txt-code-login').val("");
                             $('#div-section').empty();
                             for (var i = 0; i < data.data.length; i++) {
@@ -98,17 +114,17 @@
                                 sectionTemplate.find('#btn-session').attr('href', '/Home/Index/' + data.data[i].EventId + '/' + data.data[i].SessionID);
                                 $('#div-section').append(sectionTemplate.html());
                             }
-
-                            
                         }
                         else {
                             $('.message-error').css('display', 'block');
                             $('#txt-code-login').val("");
+                            $('.container-loader').css('display', 'none');
                         }
                     },
                     error: function (data) {
                         $('.message-error').css('display', 'block');
                         $('#txt-code-login').val("");
+                        $('.container-loader').css('display', 'none');
                         console.log(data);
                     }
                 });
