--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
     ViewBag.Title = "Home Page";
     //var listBannerImage = Model.EventCollections.FirstOrDefault(e => e.EventCollectionID == 1).CollectionItems;
 }
-@using HmsService.Models.Entities;
-@model Event
+@using HmsService.ViewModels;
+@model EventViewModel
 
 <div class="container">
     <div class="row" style="height:100px">
