--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Sponsor/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Sponsor/Index.cshtml
@@ -18,7 +18,7 @@ else
         @{
             foreach (var sponsor in Model.CollectionItems)
             {
-                <div class="col-md-3 col-sm-6 col-12" onclick="showModalSponsor('@(sponsor.Name)', '@(sponsor.Description)')">
+                <div class="col-md-4 col-sm-6 col-12" onclick="showModalSponsor('@(sponsor.Name)', '@(sponsor.Description)')">
                     <div class="box-sponsor-shadow">
                         <a href="" id="speaker-modal" data-toggle="modal" data-target="#sponsorModal">
                             <img src="@(sponsor.ImageUrl)" alt="brand" class="img-fluid image-sponsor-custom">
@@ -33,7 +33,7 @@ else
 }
 
 <div id="sponsorModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-sponsor">
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
