--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
@@ -11,30 +11,30 @@
     <div class="ibox float-e-margins">
         <div class="ibox-title">
             <div class="row">
-                <h2 class="col-sm-10">Manage Voting</h2>
+                <h2 class="col-sm-10">Quản lý session</h2>
                 <div class="col-sm-2">
-                    <button class="btn btn-primary" type="submit" data-toggle="modal" data-target="#addSpeakerModal" style="margin-top:20px">
+                    <button class="btn btn-primary" type="submit" data-toggle="modal" data-target="#addSessionModal" style="margin-top:20px">
                         <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Add Session
                     </button>
                 </div>
             </div>
         </div>
-
+        <div class="ibox-content">
+            <table class="table table-hover table-bordered" id="tblSession">
+                <thead>
+                    <tr>
+                        <th>Tên</th>
+                        <th>Thời gian bắt đầu - kết thúc</th>
+                        <th>Miêu tả</th>
+                        <th>Chức năng</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
 
 
     </div>
-    <div class="ibox-content">
-        <table class="table table-hover table-bordered" id="tblSession">
-            <thead>
-                <tr>
-                    <th>Tên</th>
-                    <th>Thời gian bắt đầu - kết thúc</th>
-                    <th>Miêu tả</th>
-                    <th>Chức năng</th>
-                </tr>
-            </thead>
-        </table>
-    </div>
+    
 </div>
 
 
@@ -90,19 +90,6 @@
     </div>
 </div>
 
-        </div>
-    </div>
-<table class="table table-hover table-bordered" id="tblSession">
-    <thead>
-        <tr>
-            <th>Session Name</th>
-            <th>Start Time - End Time</th>
-            <th>Description</th>
-            <th>Function</th>
-        </tr>
-    </thead>
-</table>
-</div>
 
 
 <!-- Modal Update Session -->
