--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/speaker.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/speaker.css
@@ -19,6 +19,9 @@
     .box-speaker-shadow {
         box-shadow: 5px 10px 20px 7px #888888;
     }
+    .modal-speaker {
+        margin-right:25px;
+    }
 }
 
 .collection-empty-title {
