--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/voting.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/voting.css
@@ -415,3 +415,12 @@
     .panel-danger > .panel-footer + .panel-collapse > .panel-body {
         border-bottom-color: #ebccd1;
     }
+
+
+@media screen and (max-width: 600px) {
+    .panel-voting {
+        margin-left:unset;
+    }
+
+
+}
