--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Livestream/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Livestream/Index.cshtml
@@ -5,7 +5,28 @@
 @using HmsService.ViewModels
 @model SessionViewModel
 
-<div class="videoWrapper">
-    <iframe @*style="width:100%; height:100%;"*@ width="100%" height="100%" src="@(Model.LivestreamUrl)" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-</div>
+@if (Model != null)
+{
+    if (Model.LivestreamUrl != null)
+    {
+        <div class="videoWrapper">
+            <iframe @*style="width:100%; height:100%;"*@ width="100%" height="100%" src="@(Model.LivestreamUrl)" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+    }
+    else
+    {
+        <div class="error-livestream-title">
+            <h3 class="">Hiện tại chúng tôi chưa tiến hành livestream</h3>
+        </div>
+    }
+}
+else
+{
+    <div class="error-livestream-title">
+        <h3 class="">Hiện tại chúng tôi chưa tiến hành livestream</h3>
+    </div>
+
+}
+
+
 
