--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
@@ -63,7 +63,7 @@
 
 </div>
 
-<input type="hidden" id="txt-voting-id" value="@Model.VotingId" />
+<input type="hidden" id="txt-voting-id" value="@(Model != null ? Model.VotingId : 0)" />
 <div id="progress-bar-result-template" style="display:none;">
     <div class="progress progress-striped">
         <div class="progress-bar progress-bar-success" role="progressbar" data-transitiongoal=""></div>
